--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:db;MODE=MYSQL;
-spring.datasource.username=sa
-spring.datasource.password=
 
 spring.thymeleaf.cache=false
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+#data??
+spring.profiles.include=jwt
