--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 
     //swagger
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation "io.springfox:springfox-swagger-ui:3.0.0"
 
     //validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
